--- a/views/admin/birthdayMessages.ejs
+++ b/views/admin/birthdayMessages.ejs
@@ -117,7 +117,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fermer"></button>
                 </div>
                 <div class="modal-body">
-                    <div class="alert alert-danger d-none" role="alert">
+                    <div class="alert alert-danger bg-white d-none" role="alert">
                         <div class="text-muted"></div>
                     </div>
                     <div class="mb-3">
