--- a/views/agent/includes/header.ejs
+++ b/views/agent/includes/header.ejs
@@ -1,62 +1,64 @@
-<header class="navbar navbar-expand-md navbar-dark sticky-top d-print-none">
-    <div class="container-xl">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-menu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <h1 class="navbar-brand d-none-navbar-horizontal pe-0 pe-md-3">
-            <a href="/">
-                <img src="/static/assets/images/logo.gif" width="32" height="32" alt="BSFR" class="navbar-brand-image me-2">
-                Beat Saber FR
-            </a>
-        </h1>
-        <div class="navbar-nav flex-row order-md-last">
-            <div class="nav-item dropdown">
-                <a href="#" class="nav-link d-flex lh-1 text-reset p-0" data-bs-toggle="dropdown" aria-label="Open user menu" aria-expanded="false">
-                    <span class="avatar avatar-sm" style="background-image: url(<%= user.avatarURL %>?size=80)"></span>
-                    <div class="d-none d-xl-block ps-2">
-                        <div><%= user.username %></div>
-                    </div>
+<div class="sticky-top">
+    <header class="navbar navbar-expand-md sticky-top d-print-none" data-bs-theme="dark">
+        <div class="container-xl">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-menu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <h1 class="navbar-brand d-none-navbar-horizontal pe-0 pe-md-3">
+                <a href="/">
+                    <img src="/static/assets/images/logo.gif" width="32" height="32" alt="BSFR" class="navbar-brand-image me-2">
+                    Beat Saber FR
                 </a>
-                <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-                    <a href="/agent/" class="dropdown-item">Agent</a>
-                    <a href="/admin/" class="dropdown-item">Administration</a>
-                    <div class="dropdown-divider"></div>
-                    <a href="/discord/logout" class="dropdown-item">Déconnexion</a>
+            </h1>
+            <div class="navbar-nav flex-row order-md-last">
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link d-flex lh-1 text-reset p-0" data-bs-toggle="dropdown" aria-label="Open user menu" aria-expanded="false">
+                        <span class="avatar avatar-sm" style="background-image: url(<%= user.avatarURL %>?size=80)"></span>
+                        <div class="d-none d-xl-block ps-2">
+                            <div><%= user.username %></div>
+                        </div>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
+                        <a href="/agent/" class="dropdown-item">Agent</a>
+                        <a href="/admin/" class="dropdown-item">Administration</a>
+                        <div class="dropdown-divider"></div>
+                        <a href="/discord/logout" class="dropdown-item">Déconnexion</a>
+                    </div>
                 </div>
-              </div>
+            </div>
         </div>
-    </div>
-</header>
-<div class="navbar-expand-md">
-    <div class="collapse navbar-collapse" id="navbar-menu">
-        <div class="navbar navbar-light">
-            <div class="container-xl">
-                <ul class="navbar-nav">
-                    <li class="nav-item<%= page === 'message_send' ? ' active' : '' %>">
-                        <a class="nav-link" href="/agent/message/send">
-                            <span class="nav-link-icon d-md-none d-lg-inline-block">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M12.007 19.98a9.869 9.869 0 0 1 -4.307 -.98l-4.7 1l1.3 -3.9c-2.324 -3.437 -1.426 -7.872 2.1 -10.374c3.526 -2.501 8.59 -2.296 11.845 .48c1.992 1.7 2.93 4.04 2.747 6.34"></path><path d="M16 19h6"></path><path d="M19 16v6"></path></svg>
-                            </span>
-                            <span class="nav-link-title">Envoyer un message</span>
-                        </a>
-                    </li>
-                    <!--<li class="nav-item<%= page === 'message_edit' ? ' active' : '' %>">
-                        <a class="nav-link" href="/agent/message/edit">
-                            <span class="nav-link-icon d-md-none d-lg-inline-block">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M11.996 19.98a9.868 9.868 0 0 1 -4.296 -.98l-4.7 1l1.3 -3.9c-2.324 -3.437 -1.426 -7.872 2.1 -10.374c3.526 -2.501 8.59 -2.296 11.845 .48c1.842 1.572 2.783 3.691 2.77 5.821"></path><path d="M19.001 19m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"></path><path d="M19.001 15.5v1.5"></path><path d="M19.001 21v1.5"></path><path d="M22.032 17.25l-1.299 .75"></path><path d="M17.27 20l-1.3 .75"></path><path d="M15.97 17.25l1.3 .75"></path><path d="M20.733 20l1.3 .75"></path></svg>
-                            </span>
-                            <span class="nav-link-title">Éditer un message</span>
-                        </a>
-                    </li>
-                    <li class="nav-item<%= page === 'reaction_add' ? ' active' : '' %>">
-                        <a class="nav-link" href="/agent/reaction/add">
-                            <span class="nav-link-icon d-md-none d-lg-inline-block">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M20.985 12.528a9 9 0 1 0 -8.45 8.456"></path><path d="M16 19h6"></path><path d="M19 16v6"></path><path d="M9 10h.01"></path><path d="M15 10h.01"></path><path d="M9.5 15c.658 .64 1.56 1 2.5 1s1.842 -.36 2.5 -1"></path></svg>
-                            </span>
-                            <span class="nav-link-title">Envoyer une réaction</span>
-                        </a>
-                    </li>-->
-                </ul>
+    </header>
+    <div class="navbar-expand-md">
+        <div class="collapse navbar-collapse" id="navbar-menu">
+            <div class="navbar navbar-light">
+                <div class="container-xl">
+                    <ul class="navbar-nav">
+                        <li class="nav-item<%= page === 'message_send' ? ' active' : '' %>">
+                            <a class="nav-link" href="/agent/message/send">
+                                <span class="nav-link-icon d-md-none d-lg-inline-block">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M12.007 19.98a9.869 9.869 0 0 1 -4.307 -.98l-4.7 1l1.3 -3.9c-2.324 -3.437 -1.426 -7.872 2.1 -10.374c3.526 -2.501 8.59 -2.296 11.845 .48c1.992 1.7 2.93 4.04 2.747 6.34"></path><path d="M16 19h6"></path><path d="M19 16v6"></path></svg>
+                                </span>
+                                <span class="nav-link-title">Envoyer un message</span>
+                            </a>
+                        </li>
+                        <!--<li class="nav-item<%= page === 'message_edit' ? ' active' : '' %>">
+                            <a class="nav-link" href="/agent/message/edit">
+                                <span class="nav-link-icon d-md-none d-lg-inline-block">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M11.996 19.98a9.868 9.868 0 0 1 -4.296 -.98l-4.7 1l1.3 -3.9c-2.324 -3.437 -1.426 -7.872 2.1 -10.374c3.526 -2.501 8.59 -2.296 11.845 .48c1.842 1.572 2.783 3.691 2.77 5.821"></path><path d="M19.001 19m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"></path><path d="M19.001 15.5v1.5"></path><path d="M19.001 21v1.5"></path><path d="M22.032 17.25l-1.299 .75"></path><path d="M17.27 20l-1.3 .75"></path><path d="M15.97 17.25l1.3 .75"></path><path d="M20.733 20l1.3 .75"></path></svg>
+                                </span>
+                                <span class="nav-link-title">Éditer un message</span>
+                            </a>
+                        </li>-->
+                        <li class="nav-item<%= page === 'reaction_add' ? ' active' : '' %>">
+                            <a class="nav-link" href="/agent/reaction/add">
+                                <span class="nav-link-icon d-md-none d-lg-inline-block">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M20.985 12.528a9 9 0 1 0 -8.45 8.456"></path><path d="M16 19h6"></path><path d="M19 16v6"></path><path d="M9 10h.01"></path><path d="M15 10h.01"></path><path d="M9.5 15c.658 .64 1.56 1 2.5 1s1.842 -.36 2.5 -1"></path></svg>
+                                </span>
+                                <span class="nav-link-title">Envoyer une réaction</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
