--- a/views/feurboard.ejs
+++ b/views/feurboard.ejs
@@ -53,15 +53,17 @@
                         <div class="col-12">
                             <form class="form">
                                 <% if(!user.isBSFR) { %>
-                                <div class="alert alert-danger" role="alert">
-                                    Vous devez être membre du serveur Discord BSFR afin de pouvoir visualiser le feurboard.<br>
-                                    Vous pouvez nous rejoindre en cliquant sur ce lien d'invitation : <a href="<%= inviteUrl %>" target="_blank"><%= inviteUrl %></a><br>
-                                    <i>Actualisez la page après avoir rejoint le serveur Discord pour voir le classement.</i>
+                                <div class="alert alert-danger bg-white" role="alert">
+                                    <div class="text-muted">
+                                        Vous devez être membre du serveur Discord BSFR afin de pouvoir visualiser le feurboard.<br>
+                                        Vous pouvez nous rejoindre en cliquant sur ce lien d'invitation : <a href="<%= inviteUrl %>" target="_blank"><%= inviteUrl %></a><br>
+                                        <i>Actualisez la page après avoir rejoint le serveur Discord pour voir le classement.</i>
+                                    </div>
                                 </div>
                                 <% } %>
 
                                 <% if(user.isBSFR) { %>
-                                <div class="alert alert-info" role="alert">
+                                <div class="alert alert-info bg-white" role="alert">
                                     <div class="alert-title">Quoi ?</div>
                                     <div class="text-muted">Et oui, le classement des "feur" est maintenant fermé. Le feurboard restera figé à tout jamais.</div>
                                 </div>
