--- a/views/forms/run/mpov.ejs
+++ b/views/forms/run/mpov.ejs
@@ -124,19 +124,19 @@
                         </div>
                     </form>
                     <% } else { %>
-                    <div class="alert alert-info" role="alert">
+                    <div class="alert alert-info bg-white" role="alert">
                         <div class="text-muted">La soumission de vidéo Multi POV BSFR #<%= mpovInfos.id %> est fermée</div>
                     </div>
                     <% } %>
 
                     <% } else { %>
-                        <div class="alert alert-danger" role="alert">
+                        <div class="alert alert-danger bg-white" role="alert">
                             <div class="text-muted"><%= mpovInfos.error %></div>
                         </div>
                     <% } %>
 
                     <% } else { %>
-                        <div class="alert alert-danger" role="alert">
+                        <div class="alert alert-danger bg-white" role="alert">
                             <div class="text-muted">
                                 Vous devez être membre du serveur Discord BSFR afin de pouvoir nous soumettre une run Multi POV.<br>
                                 Vous pouvez nous rejoindre en cliquant sur ce lien d'invitation : <a href="<%= inviteUrl %>" target="_blank"><%= inviteUrl %></a><br>
