--- a/views/forms/run/youtube.ejs
+++ b/views/forms/run/youtube.ejs
@@ -281,7 +281,7 @@
                         </form>
                     </div>
                     <% } else { %>
-                        <div class="alert alert-danger" role="alert">
+                        <div class="alert alert-danger bg-white" role="alert">
                             <div class="text-muted">
                                 Vous devez être membre du serveur Discord BSFR afin de pouvoir nous soumettre une run.<br>
                                 Vous pouvez nous rejoindre en cliquant sur ce lien d'invitation : <a href="<%= inviteUrl %>" target="_blank"><%= inviteUrl %></a><br>
