--- a/views/map.ejs
+++ b/views/map.ejs
@@ -39,15 +39,17 @@
                         <div class="col-12">
                             <form class="form">
                                 <% if(!user.isBSFR) { %>
-                                <div class="alert alert-danger" role="alert">
-                                    Vous devez être membre du serveur Discord BSFR afin de pouvoir visualiser la carte interactive.<br>
-                                    Vous pouvez nous rejoindre en cliquant sur ce lien d'invitation : <a href="<%= inviteUrl %>" target="_blank"><%= inviteUrl %></a><br>
-                                    <i>Actualisez la page après avoir rejoint le serveur Discord pour voir la carte.</i>
+                                <div class="alert alert-danger bg-white" role="alert">
+                                    <div class="text-muted">
+                                        Vous devez être membre du serveur Discord BSFR afin de pouvoir visualiser la carte interactive.<br>
+                                        Vous pouvez nous rejoindre en cliquant sur ce lien d'invitation : <a href="<%= inviteUrl %>" target="_blank"><%= inviteUrl %></a><br>
+                                        <i>Actualisez la page après avoir rejoint le serveur Discord pour voir la carte.</i>
+                                    </div>
                                 </div>
                                 <% } %>
 
                                 <% if(user.isBSFR) { %>
-                                <div class="alert alert-info" role="alert">
+                                <div class="alert alert-info bg-white" role="alert">
                                     <div class="text-muted">Utilisez la commande <code>/ville</code> dans le salon <strong>#rôles-auto-assignable</strong> afin d'apparaître sur la carte.</div>
                                 </div>
                                 <div id="map" style="width: 100%; height: 600px; position: relative; outline: none;" class="leaflet-container leaflet-touch leaflet-fade-anim leaflet-grab leaflet-touch-drag leaflet-touch-zoom" tabindex="0"></div>
