Correction de bug + Ajout du classement

--- a/public/assets/css/rankedle.css
+++ b/public/assets/css/rankedle.css
@@ -1,3 +1,7 @@
+#rankedle > * {
+    user-select: none;
+}
+
 #rankedle .step {
     max-height: 38px;
     border: 1px solid var(--tblr-border-color);
